--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,13 @@
 body {
   background-color: #eee;
 }
+
+.container {
+  text-align: center;
+}
+
+.wrapper {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
