--- a/src/styles/_cell.scss
+++ b/src/styles/_cell.scss
@@ -1,13 +1,29 @@
 .cell-div {
-  height: 10px;
-  width: 10px;
+  height: 8px;
+  width: 8px;
   border: 1px solid lightgray;
 }
 
-.full {
-  background-color: #422;
+// .full {
+//   background-color: #422;
+// }
+//
+// .newCell {
+//   background-color: #633;
+// }
+
+.age1 {
+  background-color: $base-color;
 }
 
-.newCell {
-  background-color: #633;
+.age2 {
+  background-color: darken($base-color, 10%);
+}
+
+.age3 {
+  background-color: darken($base-color, 20%);
+}
+
+.age4 {
+  background-color: darken($base-color, 30%);
 }
